Dropper Dupe Fix + Menu

--- a/Anti-Dupe Pack/manifest.json
+++ b/Anti-Dupe Pack/manifest.json
@@ -1,13 +1,13 @@
 {
 	"format_version": 2,
 	"header": {
-		"description": "§aV3.0.1",
+		"description": "§aV3.0.3",
 		"name": "§l§bAnti§f-§cDupe",
 		"uuid": "eb5b8d37-a4f0-4fe5-b9b6-65df07cc57a8",
 		"version": [
 			3,
 			0,
-			1
+			3
 		],
 		"min_engine_version": [
 			1,
@@ -22,7 +22,7 @@
       "version": [
         3,
         0,
-        1
+        3
       ]
     },
     {
@@ -41,6 +41,10 @@
     {
       "module_name": "@minecraft/server",
       "version": "2.4.0"
+    },
+    {
+  "module_name": "@minecraft/server-ui",
+  "version": "2.0.0"
     }
   ],
   "capabilities": [
